tests/ternary/valid/rh_assignment.su
s32 main() {
    s32 flag = 1;
    s32 a = 0;
    if(flag)( a = 1 )else(a = 0);
    return a;
}