tests/ternary/invalid/incomplete_ternary.su
s32 main() {
    return if(1) 2 else;
}